<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:orientation="vertical">
    
  <TextView 
  		android:id="@+id/textView1" 
    	android:text="@string/update_install_tip" 
    	android:layout_width="match_parent" 
    	android:layout_height="wrap_content" 
    	android:textSize="18sp"
    	android:textStyle="bold"
    	android:textColor="@color/white"
    	android:layout_gravity="center">
   </TextView>
   <LinearLayout 
   		android:id="@+id/linearLayout1" 
   		android:layout_width="match_parent" 
   		android:layout_height="wrap_content"
   		android:gravity="center">
    	<Button 
    		android:text="@string/update_install_ok" 
    		android:id="@+id/btn_install" 
    		android:layout_height="wrap_content" 
    		android:layout_width="wrap_content">
    	</Button>
    	<Button 
    		android:text="@string/update_cancel" 
    		android:id="@+id/btn_cancel" 
    		android:layout_width="wrap_content" 
    		android:layout_height="wrap_content">
    	</Button>
    </LinearLayout>
</LinearLayout>
