<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent">
    <RelativeLayout android:layout_width="fill_parent"
		android:layout_height="44dp" android:background="@drawable/toolbar_background" android:gravity="center_vertical">

		<Button android:id="@+id/btnLogin" android:background="@drawable/all_blue_button_xml"
			android:layout_width="65dp" android:layout_height="30dp"
			android:layout_marginRight="10dp" android:layout_marginTop="9dp"
			android:layout_marginLeft="8dp" android:padding="0dp"
			android:layout_alignParentLeft="true" android:text="@string/toolbar_login" 
			android:visibility="visible" style="@style/text_18_white" 
		/>
		<!--<ImageButton android:id="@+id/btnUserInfo" android:src="@drawable/toolbar_userinfo_btn_xml"
			android:layout_width="79dp" android:layout_height="30dp"
			android:layout_marginRight="10dp" android:layout_marginTop="9dp"
			android:layout_marginLeft="8dp"toolbar_login_out_btn_xml
			android:padding="0dp"
			android:layout_alignParentLeft="true" 
			android:visibility="invisible"
		/>-->
		<Button android:id="@+id/btnRecentplay" android:background="@drawable/all_blue_button_xml"
			android:layout_width="75dp" android:layout_height="30dp"
			android:layout_marginRight="10dp" android:layout_marginTop="9dp"
			android:padding="0dp" android:text="@string/toolbar_recent" 
			android:layout_toRightOf="@id/btnLogin" style="@style/text_18_white" 
		/>
			
		<!-- <TextView android:text="@string/app_name" style="@style/weblib_title"
			android:layout_width="wrap_content" android:layout_height="30dp"
			android:layout_marginTop="7dp" android:layout_centerHorizontal="true" /> -->
				
		<Button android:id="@+id/btnSearch" android:background="@drawable/search_button_xml"
			android:layout_width="36dp" android:layout_height="30dp"
			android:layout_marginRight="11dp" android:layout_marginTop="7dp"
			android:padding="0dp" android:layout_alignParentRight="true" />
		<Button 
			android:id="@+id/btnDelete"
			android:background="@drawable/all_red_button_xml"
			style="@style/text_18_white" 
			android:layout_width="65dp"
			android:layout_height="30dp"
			android:text="删除"
			android:layout_marginRight="10dp"
			android:layout_marginTop="8dp"
			android:padding="0dp"
			android:layout_toRightOf="@id/btnRecentplay"
			android:visibility="gone"
		/> 
		<Button 
			android:id="@+id/btnDone"
			android:background="@drawable/all_blue_button_xml"
			android:layout_height="30dp"
			android:layout_width="wrap_content"
			android:text="完成"
			android:layout_alignParentRight="true"
			android:padding="0dp"
			android:layout_marginRight="11dp" 
			android:layout_marginTop="9dp"
			android:visibility="gone"
			style="@style/text_18_white" 
		/>
		<Button 
			android:id="@+id/btnEdit"
			android:background="@drawable/all_blue_button_xml"
			style="@style/text_18_white" 
			android:layout_height="30dp"
			android:layout_width="wrap_content"
			android:text="编辑"
			android:layout_alignParentRight="true"
			android:padding="0dp"
			android:layout_marginRight="11dp" 
			android:layout_marginTop="9dp"
			android:visibility="gone"
		/>
		
		<Button 
			android:id="@+id/btnRefresh"
			android:background="@drawable/all_blue_button_xml"
			style="@style/text_18_white" 
			android:layout_height="30dp"
			android:layout_width="wrap_content"
			android:text="刷新"
			android:layout_toLeftOf="@id/btnEdit"
			android:padding="0dp"
			android:layout_marginRight="11dp" 
			android:layout_marginTop="9dp"
			android:visibility="gone"
		/>
		
		<Button android:id="@+id/btnCategory" android:background="@drawable/all_blue_button_xml"
			android:layout_width="75dp" android:layout_height="30dp"
			android:layout_marginRight="10dp" android:layout_marginTop="9dp"
			android:padding="0dp" android:text="分类" 
			android:layout_toLeftOf="@id/btnEdit" style="@style/text_18_white" 
			android:visibility="gone"
		/>
		<!-- <ImageButton 
			android:id="@+id/btnSeries"
			android:src="@drawable/all_btn_null"
			android:background="#00000000"
			android:layout_height="30dp"
			android:layout_width="wrap_content"
			android:layout_toLeftOf="@id/btnEdit"
			android:padding="0dp"
			android:visibility="visible"
			android:layout_marginRight="11dp" 
			android:layout_marginTop="9dp"
		/>
		<TextView 
			android:layout_height="30dp"
			android:layout_width="wrap_content"
			android:text="分类"
			android:layout_toLeftOf="@id/btnEdit"
			android:padding="0dp"
			android:visibility="visible"
			android:layout_marginRight="11dp" 
			android:layout_marginTop="9dp"
		/> -->
		<Button 
			android:id="@+id/btnSelectAll"
			android:background="@drawable/all_blue_button_xml"
			android:layout_height="30dp"
			android:layout_width="wrap_content"
			android:text="全选"
			android:layout_toLeftOf="@id/btnDone"
			android:padding="0dp"
			android:visibility="gone"
			android:layout_marginRight="11dp" 
			android:layout_marginTop="9dp"
			style="@style/text_18_white" 
		/>
		
		<LinearLayout android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:layout_centerHorizontal="true"
			android:layout_centerVertical="true"
			android:orientation="horizontal"
			android:gravity="center_vertical"
			>
		
			<ImageView android:id="@+id/imageLogo" 
				android:layout_height="25dp" 
				android:src="@drawable/logo_no_title" 
				android:layout_width="25dp" 
				android:layout_centerVertical="true" 
				android:visibility="gone"
				/>
				
			<TextView android:id="@+id/text_logo"
				android:layout_height="wrap_content" 
				android:layout_width="wrap_content"
				android:layout_margin="5dp"  
				style="@style/app_logo_shadow" 
				android:text="@string/tab_local_video"
				android:visibility="visible"
				/>
					
		</LinearLayout>
	</RelativeLayout>
</LinearLayout>
